objects/tffa__DueDiligence__c.object
<CustomObject>
    <description>Due diligence is the process of gathering data in order to verify the identity of the applicant and to make sure they are not involved in money laundering , fraud  and high risk activities.
Tracks due diligence status for the given provider.</description>
    <fields>
        <fullName>DueDiligenceResponse__c</fullName>
        <description>Due diligence Response</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Due dilgience Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Report__c</fullName>
        <description>Due Diligence Report</description>
        <formula>IF(NOT(ISBLANK( tffa__ReportName__c )), HYPERLINK(&apos;/apex/tffa__dueDiligenceReport?id=&apos;+Id, tffa__ReportName__c, &apos;_blank&apos;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ContextId__c</fullName>
        <description>Stores the context related to the due-diligence activity. Used in reevaluation cases where context needs to preserved.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Context ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ConversationId__c</fullName>
        <description>Conversation id when exchanging information with a remote interface.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Conversation id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DeviceToken__c</fullName>
        <description>Represents information collected about the software and hardware of a device for the purpose of identification. This can be either a device fingerprint or a device id referencing the device information stored in an external system.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Device token</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__EndDate__c</fullName>
        <defaultValue>DATE(2049,1,1)</defaultValue>
        <description>Datetime on which the current due diligence is expired.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__ExternalQuestionnaireId__c</fullName>
        <description>Stores the reference to an external questionnaire or quiz. Populated when OOW questions are returned in a due-diligence activity.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>External Questionnaire Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalUrl__c</fullName>
        <description>A url to the related evaluation/due-diligence activity in the external system. Usually addressable in browser.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>External url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__OTP__c</fullName>
        <description>A one-time password generated for the party to authenticate themself as part of a due-diligence activity.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>One-time password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Overridden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If status was overridden.</description>
        <label>Overridden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__OverrideComments__c</fullName>
        <description>Additional notes on why the Due Diligence Status was overridden.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Override Comments</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__OverrideReason__c</fullName>
        <description>Reason for override (if applicable).</description>
        <label>Override reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__DueDiligenceOverrideReason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__OverrideSource__c</fullName>
        <description>Source of override for the status of due-diligence. Used when an external system updates the status.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Override source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Party__c</fullName>
        <description>Reference to related party.</description>
        <label>Party</label>
        <referenceTo>tffa__Party__c</referenceTo>
        <relationshipLabel>Due Diligences</relationshipLabel>
        <relationshipName>DueDiligences</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__ProviderStatus__c</fullName>
        <description>Stores the status, returned by the provider. This is specific to the provider implementation. The status field helps standardize the provider status across all provider implementations.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Provider__c</fullName>
        <description>The provider for the diligence verification. This could be the name of the interface provider.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Questionnaire__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to Questionnaire, if due diligence questions are derived from a questionnaire.</description>
        <label>Questionnaire</label>
        <referenceTo>tffa__Questionnaire__c</referenceTo>
        <relationshipLabel>Due Diligences</relationshipLabel>
        <relationshipName>DueDiligences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__Remarks__c</fullName>
        <description>Additional comments/reasons supporting the due-diligence result.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Remarks</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__ReportLink__c</fullName>
        <description>Link to report. Primarily used in salesforce pages.</description>
        <formula>IF(ISBLANK(tffa__ReportName__c), NULL, HYPERLINK(BLANKVALUE(tffa__ReportUrl__c, &apos;/apex/dueDiligenceReport&apos;)+IF(CONTAINS(tffa__ReportUrl__c, &apos;?&apos;), &apos;&amp;&apos;, &apos;?&apos;)+&apos;id=&apos;+Id, tffa__ReportName__c, &apos;_self&apos;))</formula>
        <label>Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ReportName__c</fullName>
        <description>Name of the associated report.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Report name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ReportUrl__c</fullName>
        <description>Report url. Usually points to a VF page.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Report url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>tffa__Response__c</fullName>
        <description>Certain providers respond with JSON /HTML as response which can be stored in this field and parsed for display purposes.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Response</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__ScoreRange__c</fullName>
        <description>Range for the score captured. Captured as {min score};{max score}.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Score range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Score__c</fullName>
        <description>A computed score as per the provider and type of due diligence. In some cases like QUALIFILE, the interface may provide a score.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__SourcePartyId__c</fullName>
        <description>External id of the party (entity) in the external system acting as the source of the due-diligence result.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Source party id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Source__c</fullName>
        <description>The source for the diligence verification. For simple service providers, this will be same as provider name. For aggregate ones,
        this will be the name of individual data source.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__StartDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>Datetime since the current due diligence is active.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__Status__c</fullName>
        <description>The status captured for the due diligence record.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__DueDiligenceStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Tags__c</fullName>
        <description>Additional (marker) information about the diligence. This can be used to provide an overview or highlight the main facts of the diligence.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Type__c</fullName>
        <description>The status captured for the due diligence record.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__DueDiligenceType</valueSetName>
        </valueSet>
    </fields>
    <label>Due Diligence</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Due Diligences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>